<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhereWolf2014</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">&#160;Username</string>
    <string name="clickme">Click Me</string>
    <string name="password">&#160;Password</string>
    <string name="passwordConfirm">&#160;Comfirm your password</string>
    <string name="needtoregister">Need an account?</string>
    <string name="wrong_string">Wrong</string>
    <string name="toast_string">Invalid Username/Password or Username already exists</string>
    <string name="toast_login_string">Invalid Username or Password</string>
    <string name="toast_create_game_string">Invalid Game Name</string>
    <string name="toast_join_game_string">game not in the lobby mode (started or ended), please select another one</string>
    <string name="title_activity_game_selection">GameSelectionActivity</string>
    <string name="gameSelector">Please select a game:</string>
    <string name="create_new_game">Create New Game</string>
    <string name="create_game">Create Game</string>
    <string name="new_game_name">&#160;Game Name</string>
    <string name="game_description">&#160;Game Description</string>
    <string name="start_game">Start Game</string>
    <string name="game_players">Curreny players joined in: </string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="title_activity_join_game">GameLobbyActivity</string>
    <string name="empty_string">&#160;</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="logout">Log out</string>
    
    <string name="profile_pic">Profile Picture</string>
    <string name="attack">Attack</string>
    <string name="vote">Vote</string>
       

</resources>
