<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purplelogobg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.utexas.LI.wherewolf.CreateGameActivity" >

    <EditText
        android:id="@+id/gameNameText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/new_game_name"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/gameNameText"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/gameDescription"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_below="@+id/passwordText"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/game_description"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/create_game_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:text="@string/create_game" />

</RelativeLayout>