<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    

        <LinearLayout
            android:id="@+id/back"
            android:tag="back"
            style="@style/MyListBackContent">
 
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/attack_button"
                style="@style/MyListButtonAction"
                android:text="@string/attack" />
        
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vote_button"
                style="@style/MyListButtonAction"
                android:text="@string/vote" /> 
 
    </LinearLayout>
    
     <LinearLayout
            android:id="@+id/front"
            android:tag="front"
            style="@style/MyListFrontContent">
 

         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                style="@style/MyListTitle"
                android:id="@+id/player_id"/>
        
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                style="@style/MyListTitle"
                android:id="@+id/player_name"/>

        <ImageView
                style="@style/MyListImage"
                android:id="@+id/prof_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_pic"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                style="@style/MyListTitle"
                android:id="@+id/num_votes"/>
        
    </LinearLayout>
    
</FrameLayout>